--- a/Grafik/Grafik_Console.csproj
+++ b/Grafik/Grafik_Console.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Grafik.Logic\Grafik_Logic.csproj" />
+  </ItemGroup>
+
 </Project>
