--- a/Grafik.Logic/Grafik_Logic.csproj
+++ b/Grafik.Logic/Grafik_Logic.csproj
@@ -9,7 +9,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="JSON Files\Employees.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="JSON Files\EmployeesDummyData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="JSON Files\More.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="JSON Files\Timesheet.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="JSON Files\TimesheetHistory.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
