--- a/Grafik_Web/Grafik_Web.csproj
+++ b/Grafik_Web/Grafik_Web.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\Grafik.Logic\Grafik_Logic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Service\" />
+  </ItemGroup>
+
 </Project>
